--- a/META.yml
+++ b/META.yml
@@ -3,43 +3,43 @@ abstract: 'perl implementation of Rx schema system'
 author:
   - 'Ricardo SIGNES <rjbs@cpan.org>'
 build_requires:
-  File::Find::Rule: 0
-  JSON: 2
-  Test::Deep::NoTest: 0
-  Test::More: 0.96
-  Try::Tiny: 0
-  autodie: 0
-  lib: 0
+  File::Find::Rule: '0'
+  JSON: '2'
+  Test::Deep::NoTest: '0'
+  Test::More: '0.96'
+  Try::Tiny: '0'
+  autodie: '0'
+  lib: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 6.30
+  ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.007, CPAN::Meta::Converter version 2.133380'
+generated_by: 'Dist::Zilla version 5.017, CPAN::Meta::Converter version 2.141170'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Data-Rx
 requires:
-  Carp: 0
-  File::Find::Rule: 0
-  JSON: 2
-  List::Util: 0
-  Number::Tolerant: 0
-  Scalar::Util: 0
-  Test::More: 0.96
-  autodie: 0
-  overload: 0
-  parent: 0
-  strict: 0
-  warnings: 0
+  Carp: '0'
+  File::Find::Rule: '0'
+  JSON: '2'
+  List::Util: '0'
+  Number::Tolerant: '0'
+  Scalar::Util: '0'
+  Test::More: '0.96'
+  autodie: '0'
+  overload: '0'
+  parent: '0'
+  strict: '0'
+  warnings: '0'
 resources:
   bugtracker: https://github.com/rjbs/rx/issues
   homepage: https://github.com/rjbs/rx
   repository: https://github.com/rjbs/rx.git
-version: 0.200005
+version: '0.200006'
 x_Dist_Zilla:
   perl:
-    version: 5.018001
+    version: '5.019011'
   plugins:
     -
       class: Dist::Zilla::Plugin::Prereqs
@@ -48,19 +48,24 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
+      config:
+        Dist::Zilla::Plugin::Git::GatherDir:
+          include_untracked: '0'
+        Dist::Zilla::Role::Git::Repo:
+          repo_root: .
       name: '@Filter/Git::GatherDir'
-      version: 2.019
+      version: '2.022'
     -
       class: Dist::Zilla::Plugin::CheckPrereqsIndexed
       name: '@Filter/CheckPrereqsIndexed'
-      version: 0.009
+      version: '0.012'
     -
       class: Dist::Zilla::Plugin::CheckExtraTests
       name: '@Filter/CheckExtraTests'
-      version: 0.016
+      version: '0.021'
     -
       class: Dist::Zilla::Plugin::PromptIfStale
       config:
@@ -72,98 +77,101 @@ x_Dist_Zilla:
           phase: build
           skip: []
       name: '@Filter/RJBS-Outdated'
-      version: 0.015
+      version: '0.023'
     -
       class: Dist::Zilla::Plugin::PromptIfStale
       config:
         Dist::Zilla::Plugin::PromptIfStale:
-          check_all_plugins: 1
+          check_all_plugins: '1'
           check_all_prereqs: 0
           modules: []
           phase: release
           skip: []
       name: '@Filter/CPAN-Outdated'
-      version: 0.015
+      version: '0.023'
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/@Filter/PruneCruft'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/@Filter/ManifestSkip'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/@Filter/MetaYAML'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/@Filter/License'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/@Filter/Readme'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/@Filter/ExecDir'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/@Filter/ShareDir'
-      version: 5.007
-    -
-      class: Dist::Zilla::Plugin::MakeMaker
-      name: '@Filter/@Filter/MakeMaker'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/@Filter/Manifest'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/@Filter/TestRelease'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/@Filter/ConfirmRelease'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/@Filter/UploadToCPAN'
-      version: 5.007
+      version: '5.017'
+    -
+      class: Dist::Zilla::Plugin::MakeMaker
+      config:
+        Dist::Zilla::Role::TestRunner:
+          default_jobs: 9
+      name: '@Filter/MakeMaker'
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Filter/AutoPrereqs'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Filter/PkgVersion'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Filter/MetaConfig'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Filter/MetaJSON'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Filter/NextRelease'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::Test::ChangesHasContent
       name: '@Filter/Test::ChangesHasContent'
-      version: 0.006
+      version: '0.006'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Filter/ReportVersions::Tiny'
-      version: 1.10
+      version: '1.10'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -171,12 +179,13 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: '@Filter/TestMoreWithSubtests'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
         Dist::Zilla::Plugin::PodWeaver:
-          config_plugin: '@RJBS'
+          config_plugins:
+            - '@RJBS'
           finder:
             - ':InstallModules'
             - ':ExecFiles'
@@ -184,131 +193,188 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::EnsurePod5
               name: '@CorePrep/EnsurePod5'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Plugin::H1Nester
               name: '@CorePrep/H1Nester'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Plugin::SingleEncoding
               name: '@RJBS/SingleEncoding'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Name
               name: '@RJBS/Name'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Version
               name: '@RJBS/Version'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Region
               name: '@RJBS/Prelude'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Generic
               name: '@RJBS/Synopsis'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Generic
               name: '@RJBS/Description'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Generic
               name: '@RJBS/Overview'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Generic
               name: '@RJBS/Stability'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Collect
               name: Attributes
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Collect
               name: Methods
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Collect
               name: Functions
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Leftovers
               name: '@RJBS/Leftovers'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Region
               name: '@RJBS/postlude'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Authors
               name: '@RJBS/Authors'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Legal
               name: '@RJBS/Legal'
-              version: 4.005
+              version: '4.006'
             -
               class: Pod::Weaver::Plugin::Transformer
               name: '@RJBS/List'
-              version: 4.005
+              version: '4.006'
       name: '@Filter/PodWeaver'
-      version: 4.002
+      version: '4.005'
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Filter/GithubMeta'
-      version: 0.42
+      version: '0.46'
     -
       class: Dist::Zilla::Plugin::Git::Check
+      config:
+        Dist::Zilla::Plugin::Git::Check:
+          untracked_files: die
+        Dist::Zilla::Role::Git::DirtyFiles:
+          allow_dirty:
+            - dist.ini
+            - Changes
+          allow_dirty_match: []
+          changelog: Changes
+        Dist::Zilla::Role::Git::Repo:
+          repo_root: .
       name: '@Filter/@Git/Check'
-      version: 2.019
+      version: '2.022'
     -
       class: Dist::Zilla::Plugin::Git::Commit
+      config:
+        Dist::Zilla::Plugin::Git::Commit:
+          add_files_in: []
+          commit_msg: v%v%n%n%c
+          time_zone: local
+        Dist::Zilla::Role::Git::DirtyFiles:
+          allow_dirty:
+            - dist.ini
+            - Changes
+          allow_dirty_match: []
+          changelog: Changes
+        Dist::Zilla::Role::Git::Repo:
+          repo_root: .
       name: '@Filter/@Git/Commit'
-      version: 2.019
+      version: '2.022'
     -
       class: Dist::Zilla::Plugin::Git::Push
+      config:
+        Dist::Zilla::Plugin::Git::Push:
+          push_to:
+            - 'origin :'
+            - 'github :'
+          remotes_must_exist: 0
+        Dist::Zilla::Role::Git::Repo:
+          repo_root: .
       name: '@Filter/@Git/Push'
-      version: 2.019
+      version: '2.022'
     -
       class: Dist::Zilla::Plugin::Git::Tag
+      config:
+        Dist::Zilla::Plugin::Git::Tag:
+          branch: ~
+          signed: 0
+          tag: perl-0.200006
+          tag_format: perl-%v
+          tag_message: v%v
+          time_zone: local
+        Dist::Zilla::Role::Git::Repo:
+          repo_root: .
       name: Git::Tag
-      version: 2.019
+      version: '2.022'
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
+      config:
+        Dist::Zilla::Plugin::Git::NextVersion:
+          first_version: '0.001'
+          version_by_branch: '0'
+          version_regexp: (?^u:^perl-(.+)$)
+        Dist::Zilla::Role::Git::Repo:
+          repo_root: .
       name: Git::NextVersion
-      version: 2.019
+      version: '2.022'
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: GatherDir
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 5.007
+      version: '5.017'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 5.007
+      version: '5.017'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':AllFiles'
+      version: '5.017'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':NoFiles'
+      version: '5.017'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: 0
-    version: 5.007
+      is_trial: '0'
+    version: '5.017'
